refactor: separate `postgresql_database` resource from codegen
